bug fix on verify

--- a/alipay_config.py.example
+++ b/alipay_config.py.example
@@ -42,7 +42,7 @@ partner_id = '2088221111111111' #支付宝后台的合作商ID
 key = 'x3lkj884ttlm0o8wqjoi0k7ito8urtx'
 wap_pay_service = 'alipay.wap.create.direct.pay.by.user'
 web_pay_service = 'create_direct_pay_by_user'
-#notify_url = 'http://www.example.com/alipay/payment_callbak'
+notify_url = 'http://www.example.com/alipay/payment_callbak'
 return_url = 'http://localhost:9998/alipay/payment_callback'
 gateway = 'https://mapi.alipay.com/gateway.do?'
 notify_verify_service = 'notify_verify'
